apps/scripts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scripts
  labels:
    istio.io/dataplane-mode: ambient
