apps/scripts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scripts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scripts
  template:
    metadata:
      labels:
        app: scripts
    spec:
      containers:
        - name: script-runner
          image: ghcr.io/danielcraciungithub/script-runner:ffc2ac2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: scripts-volume
              mountPath: /scripts
      volumes:
        - name: scripts-volume
          hostPath:
            path: /home/dc/scripts
