apps/scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scripts
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: scripts
  type: ClusterIP
