apps/scripts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scripts
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: scripts.dc.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scripts
                port:
                  number: 80
